--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,90 @@
 body {
   background-color: darkkhaki;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 16px;
 }
 
 form {
   background-color: grey;
 }
 
+p {
+  font-size: x-small;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+
+.invalid-input {
+  background: lightpink;
+  color: red;
+}
+
+.valid-input {
+  background: lightgreen;
+  color: green;
+}
+
 .grid-container {
   display: grid;
-  border: black;
-  border-width: 1;
+  padding: 20px;
+}
+
+.grid-header {
+  grid-column: 1/5;
+  grid-row: 1/2;
+}
+
+.grid-lfname {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  padding: 5px;
+}
+.grid-ifname {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  padding: 5px;
+}
+
+.grid-llname {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  padding: 5px;
+}
+.grid-ilname {
+  grid-column: 3/4;
+  grid-row: 3/4;
+  padding: 5px;
+}
+
+.grid-luname {
+  grid-column: 1/2;
+  grid-row: 4/5;
+  padding: 5px;
+}
+.grid-iuname {
+  grid-column: 1/2;
+  grid-row: 5/6;
+  padding: 5px;
+}
+
+.grid-ldob {
+  grid-column: 3/4;
+  grid-row: 4/5;
+  padding: 5px;
+}
+.grid-idob {
+  grid-column: 3/4;
+  grid-row: 5/6;
+  padding: 5px;
+}
+
+.grid-bsubmit {
+  grid-column: 1/3;
+  grid-row: 6/7;
+  padding: 5px;
+}
+.grid-bclear {
+  grid-column: 3/5;
+  grid-row: 6/7;
+  padding: 5px;
 }
